--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>English Grammar A1-A2</title>
-  <link rel="stylesheet" href="style.css" />
-
-  <!-- 3D Model Viewer -->
+  <title>Русская грамматика A1–A2</title>
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -16,130 +12,114 @@
       margin: 0;
       padding: 20px;
     }
-
     .container {
       max-width: 900px;
       margin: 0 auto;
-      background: #fff;
-      padding: 25px;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
-
     h1, h2 {
-      text-align: center;
       color: #333;
     }
-
     .rule {
-      margin-bottom: 40px;
-      padding: 20px;
-      border: 1px solid #ddd;
+      background: #fff;
+      padding: 15px;
+      margin-bottom: 20px;
       border-radius: 10px;
-      background-color: #fafafa;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
-
     model-viewer {
       width: 100%;
       height: 300px;
-      background-color: #eee;
-      border-radius: 10px;
-      margin: 10px 0;
-    }
-
-    audio {
-      width: 100%;
       margin-top: 10px;
+    }
+    audio {
+      margin-top: 10px;
+      width: 100%;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>English Grammar (A1–A2)</h1>
+    <h1>Русская грамматика (A1–A2)</h1>
 
-    <!-- A1 Rules -->
+    <!-- A1 Level -->
     <section>
-      <h2>A1 Level</h2>
+      <h2>Уровень A1</h2>
 
       <div class="rule">
-        <h3>1. To be (am/is/are)</h3>
-        <p>Example: I am a student. She is happy.<br> Қазақша: Мен студентпін. Ол бақытты.</p>
-        <model-viewer src="happy student.glb" alt="To be model" auto-rotate camera-controls ar></model-viewer>
-        <audio controls src="audio/e1.mp3"></audio>
+        <h3>1. Глагол "быть" в настоящем времени</h3>
+        <p>Я студент. Она учитель. <br> Қазақша: Мен студентпін. Ол мұғалім.</p>
+        <model-viewer src="assets/byt.glb" alt="To be" auto-rotate camera-controls ar></model-viewer>
+        <audio controls src="audio/byt.mp3"></audio>
       </div>
 
       <div class="rule">
-        <h3>2. Simple Present</h3>
-        <p>Example: He plays football. I like apples.<br> Қазақша: Ол футбол ойнайды. Маған алма ұнайды.</p>
-        <model-viewer src="assets/play soccer.glb" alt="Simple Present" auto-rotate camera-controls ar></model-viewer>
-        <model-viewer src="assets/apples.glb" alt="Simple Present" auto-rotate camera-controls ar></model-viewer>
-        <audio controls src="audio/e2.mp3"></audio>
+        <h3>2. Личные местоимения</h3>
+        <p>Он, она, мы, вы, они. <br> Қазақша: ол, ол, біз, сіз, олар.</p>
+        <model-viewer src="assets/pronouns.glb" alt="Pronouns" auto-rotate camera-controls ar></model-viewer>
+        <audio controls src="audio/pronouns.mp3"></audio>
       </div>
 
       <div class="rule">
-        <h3>3. Articles (a/an/the)</h3>
-        <p>Example: I saw a cat. The cat was black.<br> Қазақша: Мен мысықты көрдім. Мысық қара түсті.</p>
-        <model-viewer src="cat.glb" alt="Articles" auto-rotate camera-controls ar></model-viewer>
-        <audio controls src="audio/e3.mp3"></audio>
+        <h3>3. Настоящее время (глаголы 1 и 2 спр.)</h3>
+        <p>Я читаю книгу. Он пишет письмо. <br> Қазақша: Мен кітап оқимын. Ол хат жазады.</p>
+        <model-viewer src="assets/present.glb" alt="Present Tense" auto-rotate camera-controls ar></model-viewer>
+        <audio controls src="audio/present.mp3"></audio>
       </div>
 
       <div class="rule">
-        <h3>4. Pronouns</h3>
-        <p>Example: This is my book. That is yours.<br> Қазақша: Бұл менің кітабым. Бұл сенікі.</p>
-        <model-viewer src="book.glb" alt="Pronouns" auto-rotate camera-controls ar></model-viewer>
-        <audio controls src="audio/e4.mp3"></audio>
+        <h3>4. Простые прилагательные</h3>
+        <p>Красивый дом. Большая машина. <br> Қазақша: Әдемі үй. Үлкен көлік.</p>
+        <model-viewer src="assets/adjectives.glb" alt="Adjectives" auto-rotate camera-controls ar></model-viewer>
+        <audio controls src="audio/adjectives.mp3"></audio>
       </div>
 
       <div class="rule">
-        <h3>5. Prepositions of place</h3>
-        <p>Example: The book is on the table.<br> Қазақша: Кітап үстел үстінде.</p>
-        <model-viewer src="assets/tableandbook.glb" alt="Prepositions" auto-rotate camera-controls ar></model-viewer>
-        <audio controls src="audio/e5.mp3"></audio>
+        <h3>5. Падежи</h3>
+        <p>Это мой друг. Я вижу машину. <br> Қазақша: Бұл менің досым. Мен көлікті көріп тұрмын.</p>
+        <model-viewer src="assets/cases.glb" alt="Cases" auto-rotate camera-controls ar></model-viewer>
+        <audio controls src="audio/cases.mp3"></audio>
       </div>
     </section>
 
-    <!-- A2 Rules -->
+    <!-- A2 Level -->
     <section>
-      <h2>A2 Level</h2>
+      <h2>Уровень A2</h2>
 
       <div class="rule">
-        <h3>1. Past Simple</h3>
-        <p>Example: I visited my grandma yesterday.<br> Қазақша: Мен кеше әжеме бардым.</p>
-        <model-viewer src="A1/grandmother.glb" alt="Past Simple" auto-rotate camera-controls ar></model-viewer>
-        <audio controls src="audio/e6.mp3"></audio>
+        <h3>1. Прошедшее время</h3>
+        <p>Я ездил в Москву. Мы гуляли в парке. <br> Қазақша: Мен Мәскеуге бардым. Біз саябақта серуендедік.</p>
+        <model-viewer src="assets/past.glb" alt="Past Tense" auto-rotate camera-controls ar></model-viewer>
+        <audio controls src="audio/past.mp3"></audio>
       </div>
 
       <div class="rule">
-        <h3>2. There is / There are</h3>
-        <p>Example: There is a book on the table.<br> Қазақша: Үстелде кітап бар.</p>
-        <model-viewer src="assets/tableandbook.glb" alt="There is/are" auto-rotate camera-controls ar></model-viewer>
-        <audio controls src="audio/e7.mp3"></audio>
+        <h3>2. Будущее время</h3>
+        <p>Я буду читать. Мы поедем завтра. <br> Қазақша: Мен оқимын. Біз ертең барамыз.</p>
+        <model-viewer src="assets/future.glb" alt="Future Tense" auto-rotate camera-controls ar></model-viewer>
+        <audio controls src="audio/future.mp3"></audio>
       </div>
 
       <div class="rule">
-        <h3>3. Countable / Uncountable Nouns</h3>
-        <p>Example: I have some water. I need a few apples.<br> Қазақша: Менде су бар. Маған бірнеше алма керек.</p>
-        <model-viewer src="A1/water.glb" alt="Countable nouns" auto-rotate camera-controls ar></model-viewer>
-        <model-viewer src="assets/apples.glb" alt="Countable nouns" auto-rotate camera-controls ar></model-viewer>
-        <audio controls src="audio/e8.mp3"></audio>
+        <h3>3. Вопросительные слова</h3>
+        <p>Кто это? Где ты был? <br> Қазақша: Бұл кім? Сіз қайда болдыңыз?</p>
+        <model-viewer src="assets/questions.glb" alt="Questions" auto-rotate camera-controls ar></model-viewer>
+        <audio controls src="audio/questions.mp3"></audio>
       </div>
 
       <div class="rule">
-        <h3>4. Comparatives and Superlatives</h3>
-        <p>Example: She is taller than me. It’s the best day.<br> Қазақша: Ол менен биік. Бұл ең жақсы күн.</p>
-        <model-viewer src="A1/big_girl.glb" alt="Comparatives" auto-rotate camera-controls ar></model-viewer>
-        <audio controls src="audio/e9.mp3"></audio>
+        <h3>4. Отрицание</h3>
+        <p>Я не знаю. У меня нет времени. <br> Қазақша: Мен білмеймін. Менде уақыт жоқ.</p>
+        <model-viewer src="assets/negation.glb" alt="Negation" auto-rotate camera-controls ar></model-viewer>
+        <audio controls src="audio/negation.mp3"></audio>
       </div>
 
       <div class="rule">
-        <h3>5. Can / Could</h3>
-        <p>Example: I can swim. Could you help me?<br> Қазақша: Мен жүзе аламын. Сіз маған көмектесе аласыз ба?</p>
-        <model-viewer src="A1/swimming_pool.glb" alt="Can/Could" auto-rotate camera-controls ar></model-viewer>
-        <audio controls src="audio/e10.mp3"></audio>
+        <h3>5. Множественное число</h3>
+        <p>Книги, дома, машины. <br> Қазақша: Кітаптар, үйлер, машиналар.</p>
+        <model-viewer src="assets/plural.glb" alt="Plural Nouns" auto-rotate camera-controls ar></model-viewer>
+        <audio controls src="audio/plural.mp3"></audio>
       </div>
     </section>
   </div>
-
-  <script src="script.js"></script>
 </body>
 </html>
