--- a/index.html
+++ b/index.html
@@ -49,35 +49,35 @@
         <h3>1. Глагол "быть" в настоящем времени</h3>
         <p>Я студент. Она учитель. <br> Қазақша: Мен студентпін. Ол мұғалім.</p>
         <model-viewer src="assets/byt.glb" alt="To be" auto-rotate camera-controls ar></model-viewer>
-        <audio controls src="audio/byt.mp3"></audio>
+        <audio controls src="audio/r1.mp3"></audio>
       </div>
 
       <div class="rule">
         <h3>2. Личные местоимения</h3>
         <p>Он, она, мы, вы, они. <br> Қазақша: ол, ол, біз, сіз, олар.</p>
         <model-viewer src="assets/pronouns.glb" alt="Pronouns" auto-rotate camera-controls ar></model-viewer>
-        <audio controls src="audio/pronouns.mp3"></audio>
+        <audio controls src="audio/r2.mp3"></audio>
       </div>
 
       <div class="rule">
         <h3>3. Настоящее время (глаголы 1 и 2 спр.)</h3>
         <p>Я читаю книгу. Он пишет письмо. <br> Қазақша: Мен кітап оқимын. Ол хат жазады.</p>
         <model-viewer src="assets/present.glb" alt="Present Tense" auto-rotate camera-controls ar></model-viewer>
-        <audio controls src="audio/present.mp3"></audio>
+        <audio controls src="audio/r3.mp3"></audio>
       </div>
 
       <div class="rule">
         <h3>4. Простые прилагательные</h3>
         <p>Красивый дом. Большая машина. <br> Қазақша: Әдемі үй. Үлкен көлік.</p>
         <model-viewer src="assets/adjectives.glb" alt="Adjectives" auto-rotate camera-controls ar></model-viewer>
-        <audio controls src="audio/adjectives.mp3"></audio>
+        <audio controls src="audio/r4.mp3"></audio>
       </div>
 
       <div class="rule">
         <h3>5. Падежи</h3>
         <p>Это мой друг. Я вижу машину. <br> Қазақша: Бұл менің досым. Мен көлікті көріп тұрмын.</p>
         <model-viewer src="assets/cases.glb" alt="Cases" auto-rotate camera-controls ar></model-viewer>
-        <audio controls src="audio/cases.mp3"></audio>
+        <audio controls src="audio/r5.mp3"></audio>
       </div>
     </section>
 
@@ -89,35 +89,35 @@
         <h3>1. Прошедшее время</h3>
         <p>Я ездил в Москву. Мы гуляли в парке. <br> Қазақша: Мен Мәскеуге бардым. Біз саябақта серуендедік.</p>
         <model-viewer src="assets/past.glb" alt="Past Tense" auto-rotate camera-controls ar></model-viewer>
-        <audio controls src="audio/past.mp3"></audio>
+        <audio controls src="audio/r6.mp3"></audio>
       </div>
 
       <div class="rule">
         <h3>2. Будущее время</h3>
         <p>Я буду читать. Мы поедем завтра. <br> Қазақша: Мен оқимын. Біз ертең барамыз.</p>
         <model-viewer src="assets/future.glb" alt="Future Tense" auto-rotate camera-controls ar></model-viewer>
-        <audio controls src="audio/future.mp3"></audio>
+        <audio controls src="audio/r7.mp3"></audio>
       </div>
 
       <div class="rule">
         <h3>3. Вопросительные слова</h3>
         <p>Кто это? Где ты был? <br> Қазақша: Бұл кім? Сіз қайда болдыңыз?</p>
         <model-viewer src="assets/questions.glb" alt="Questions" auto-rotate camera-controls ar></model-viewer>
-        <audio controls src="audio/questions.mp3"></audio>
+        <audio controls src="audio/r8.mp3"></audio>
       </div>
 
       <div class="rule">
         <h3>4. Отрицание</h3>
         <p>Я не знаю. У меня нет времени. <br> Қазақша: Мен білмеймін. Менде уақыт жоқ.</p>
         <model-viewer src="assets/negation.glb" alt="Negation" auto-rotate camera-controls ar></model-viewer>
-        <audio controls src="audio/negation.mp3"></audio>
+        <audio controls src="audio/r9.mp3"></audio>
       </div>
 
       <div class="rule">
         <h3>5. Множественное число</h3>
         <p>Книги, дома, машины. <br> Қазақша: Кітаптар, үйлер, машиналар.</p>
         <model-viewer src="assets/plural.glb" alt="Plural Nouns" auto-rotate camera-controls ar></model-viewer>
-        <audio controls src="audio/plural.mp3"></audio>
+        <audio controls src="audio/r10.mp3"></audio>
       </div>
     </section>
   </div>
