--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
       <div class="rule">
         <h3>1. Глагол "быть" в настоящем времени</h3>
         <p>Я студент. Она учитель. <br> Қазақша: Мен студентпін. Ол мұғалім.</p>
-        <model-viewer src="assets/byt.glb" alt="To be" auto-rotate camera-controls ar></model-viewer>
+        <model-viewer src="A2/big_girl.glb" alt="To be" auto-rotate camera-controls ar></model-viewer>
+        <model-viewer src="A1/happy student.glb" alt="To be" auto-rotate camera-controls ar></model-viewer>
         <audio controls src="audio/r1.mp3"></audio>
       </div>
 
@@ -56,6 +57,7 @@
         <h3>2. Личные местоимения</h3>
         <p>Он, она, мы, вы, они. <br> Қазақша: ол, ол, біз, сіз, олар.</p>
         <model-viewer src="assets/pronouns.glb" alt="Pronouns" auto-rotate camera-controls ar></model-viewer>
+        <model-viewer src="A2/big_girl.glb" alt="Pronouns" auto-rotate camera-controls ar></model-viewer>
         <audio controls src="audio/r2.mp3"></audio>
       </div>
 
