--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <h3>3. Настоящее время (глаголы 1 и 2 спр.)</h3>
         <p>Я читаю книгу. Он пишет письмо. <br> Қазақша: Мен кітап оқимын. Ол хат жазады.</p>
         <model-viewer src="A1/book.glb" alt="Present Tense" auto-rotate camera-controls ar></model-viewer>
-        <model-viewer src="A1/book.glb" alt="Present Tense" auto-rotate camera-controls ar></model-viewer>
+        <model-viewer src="a3/letter.glb" alt="Present Tense" auto-rotate camera-controls ar></model-viewer>
         <audio controls src="audio/r3.mp3"></audio>
       </div>
 
@@ -74,7 +74,7 @@
         <h3>4. Простые прилагательные</h3>
         <p>Красивый дом. Большая машина. <br> Қазақша: Әдемі үй. Үлкен көлік.</p>
         <model-viewer src="a1/home.glb" alt="Adjectives" auto-rotate camera-controls ar></model-viewer>
-        <model-viewer src="a/adjectives.glb" alt="Adjectives" auto-rotate camera-controls ar></model-viewer>
+        <model-viewer src="a3/car.glb" alt="Adjectives" auto-rotate camera-controls ar></model-viewer>
         <audio controls src="audio/r4.mp3"></audio>
       </div>
 
@@ -82,7 +82,7 @@
         <h3>5. Падежи</h3>
         <p>Это мой друг. Я вижу машину. <br> Қазақша: Бұл менің досым. Мен көлікті көріп тұрмын.</p>
         <model-viewer src="a2/he.glb" alt="Cases" auto-rotate camera-controls ar></model-viewer>
-        <model-viewer src="a2/car.glb" alt="Cases" auto-rotate camera-controls ar></model-viewer>
+        <model-viewer src="a3/car.glb" alt="Cases" auto-rotate camera-controls ar></model-viewer>
         <audio controls src="audio/r5.mp3"></audio>
       </div>
     </section>
@@ -94,6 +94,7 @@
       <div class="rule">
         <h3>1. Прошедшее время</h3>
         <p>Я ездил в Москву. Мы гуляли в парке. <br> Қазақша: Мен Мәскеуге бардым. Біз саябақта серуендедік.</p>
+        <model-viewer src="a3/moscow.glb" alt="Past Tense" auto-rotate camera-controls ar></model-viewer>
         <model-viewer src="A2/park.glb" alt="Past Tense" auto-rotate camera-controls ar></model-viewer>
         <audio controls src="audio/r6.mp3"></audio>
       </div>
@@ -101,7 +102,7 @@
       <div class="rule">
         <h3>2. Будущее время</h3>
         <p>Я буду читать. Мы поедем завтра. <br> Қазақша: Мен оқимын. Біз ертең барамыз.</p>
-        <model-viewer src="A1/book.glb" alt="Future Tense" auto-rotate camera-controls ar></model-viewer>
+        <model-viewer src="a2/table.glb" alt="Future Tense" auto-rotate camera-controls ar></model-viewer>
         <audio controls src="audio/r7.mp3"></audio>
       </div>
 
@@ -122,9 +123,9 @@
       <div class="rule">
         <h3>5. Множественное число</h3>
         <p>Книги, дома, машины. <br> Қазақша: Кітаптар, үйлер, машиналар.</p>
-        <model-viewer src="assets/plural.glb" alt="Plural Nouns" auto-rotate camera-controls ar></model-viewer>
-        <model-viewer src="assets/plural.glb" alt="Plural Nouns" auto-rotate camera-controls ar></model-viewer>
-        <model-viewer src="assets/plural.glb" alt="Plural Nouns" auto-rotate camera-controls ar></model-viewer>
+        <model-viewer src="a1/books.glb" alt="Plural Nouns" auto-rotate camera-controls ar></model-viewer>
+        <model-viewer src="a1/home.glb" alt="Plural Nouns" auto-rotate camera-controls ar></model-viewer>
+        <model-viewer src="a3/cars.glb" alt="Plural Nouns" auto-rotate camera-controls ar></model-viewer>
         <audio controls src="audio/r10.mp3"></audio>
       </div>
     </section>
