--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       margin: 0 auto;
     }
     h1, h2 {
-      color: #f7f7f7;
+      color: #333;
     }
     .rule {
       background: #fff;
