--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Русская грамматика A1–A2</title>
-  <link rel="stylesheet" href="style.css"
+  <h1 style="text-align: center;">Русская грамматика (A1–A2)</h1>
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <style>
     body {
