--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <h1 style="text-align: center;">Русская грамматика (A1–A2)</h1>
-  <h2 style="text-align: center;">Уровень A1</h2>
+  <title>Русская грамматика(А1-А2)</title>
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <style>
     body {
