--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div class="rule">
         <h3>4. Простые прилагательные</h3>
         <p>Красивый дом. Большая машина. <br> Қазақша: Әдемі үй. Үлкен көлік.</p>
-        <model-viewer src="a1/home.glb" alt="Adjectives" auto-rotate camera-controls ar></model-viewer>
+        <model-viewer src="A1/bmw.glb" alt="Adjectives" auto-rotate camera-controls ar></model-viewer>
         <model-viewer src="a3/car.glb" alt="Adjectives" auto-rotate camera-controls ar></model-viewer>
         <audio controls src="audio/r4.mp3"></audio>
       </div>
